# ai-governance-framework

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  audit_logger.py  clli_demo.py  docker-compose.yaml  dockerfile  main.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yaml
diagrams/: governance_flow.mermaid
docker/: Dockerfile  docker-compose.yaml
guardrails/: governance_guardrail.py  output_scanner.py  pii_scanner.py
policies/: generative_ai_aup.yaml
src/ai_governance/: __init__.py  config.py  models.py  server.py
src/ai_governance/audit/: logger.py
src/ai_governance/cli/: demo.py
src/ai_governance/integrations/: jira.py  llm_client.py
src/ai_governance/policy/: loader.py
src/ai_governance/scanning/: base.py  input_scanner.py  output_scanner.py  patterns.py
tests/: conftest.py  test_audit_logger.py  test_input_scanner.py  test_output_scanner.py  test_policy_loader.py  test_server.py
